added view data

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -13,4 +13,14 @@
 
     }
 
+
+}
+
+ion-icon.header-icon{
+    font-size: 30px;
+}
+
+ion-segment.header-segment{
+  padding-left: 100px;
+  width: 70%;
 }
