some css changes

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -21,6 +21,9 @@ ion-icon.header-icon{
 }
 
 ion-segment.header-segment{
+  width: 70%;
+}
+.ios ion-segment.header-segment{
   padding-left: 100px;
   width: 70%;
 }
