--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -3,3 +3,13 @@ page-detail {
     height: 35%;
   }
 }
+.questionSlider .item-input {
+  //  width: 80%;
+    // background-color: black;
+    border: 2px solid black;
+    margin-top: 20px;
+  }
+
+  // ion-label{
+  //   margin-bottom: 50px;
+  // }
